# nanogpt

./: pyproject.toml
src/nanogpt/: __init__.py  model.py  train.py
src/nanogpt/data/: __init__.py  batch.py  datasets.py  processing.py
tests/: test_batch.py  test_datasets.py  test_model.py  test_processing.py
